--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 </head>
 <body>
 
-  IP Address Tracker
+  <!-- IP Address Tracker
 
   Search for any IP address or domain
 
   IP Address
   Location
   Timezone
-    UTC <!-- add offset value dynamically using the API -->
-  ISP
+    UTC ,add offset value dynamically using the API 
+  ISP -->
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-
+  
   <h1 class="text-3xl font-bold underline">
     Hello world!
   </h1>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Rinel iñiguez sosa</a>.
+  </div>
 </body>
 </html>
