[FEAT] Cambios en el index.html
- Envolviendo todo el contenido por la etiqueta html main

--- a/index.html
+++ b/index.html
@@ -15,24 +15,26 @@
   </style>
 </head>
 <body>
+  <main>
 
-  <!-- IP Address Tracker
-
-  Search for any IP address or domain
-
-  IP Address
-  Location
-  Timezone
-    UTC ,add offset value dynamically using the API 
-  ISP -->
+    <!-- IP Address Tracker
   
+    Search for any IP address or domain
   
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Rinel iñiguez sosa</a>.
-  </div>
+    IP Address
+    Location
+    Timezone
+      UTC ,add offset value dynamically using the API 
+    ISP -->
+    
+    
+    <h1 class="text-3xl font-bold underline">
+      Hello world!
+    </h1>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Rinel iñiguez sosa</a>.
+    </div>
+  </main>
 </body>
 </html>
