--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Frontend Mentor | IP Address Tracker</title>
-
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+          }
+        }
+      }
+    }
+  </script>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -18,7 +28,7 @@
   <main>
 
     <header>
-      
+
     </header>
     <!-- IP Address Tracker
   
