[FEAT] Estableciendo en el archivo tailwind config la configuración para los breakpoints mediante la clave screen
- estableci el break point con la clave lg a 1024px

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         extend: {
           colors: {
             clifford: '#da373d',
+          },
+          screen:{
+            lg:"1024px" //laptops pequeñas
           }
         }
       }
