[FEAT] Estableciendo en el tailwind config más configuraciones de break point
- estableci los break points con las claves sm a 640 px y md a 768 px para cambiar el contenido del diseño

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             clifford: '#da373d',
           },
           screen:{
+            sm: "640px", // Dispositivos móviles grandes
+            md: "768px", // Tablets (iPad estándar, tablets Android)
             lg:"1024px" //laptops pequeñas
           }
         }
