[FEAT] Cambios en el archivo index.html
- estableciendo en el archivo tailwind config la configuración de las imagenes de background en donde estableci la clave patternmobile para acceder a la imagen del patter mobile para el fondo, hay que recordar que 1ero trabajo first mobile
- estableciendo al elemento html header la prop css class en donde estableci una altura minima del 50%, bg-cover para que la imagen cubra al elemento header, bg-center para centrar la imagen, estableci el background-image mediante bg-patternmobile, use bg-no-repeat para que la imagen no se repitiera, estableci un color y tamaño de borde
- todo esto lo tuve que investigar claro en la documentación oficial de tailwindcss ya que si me sabia la sintaxis en css pero en tailwindcss no

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             sm: "640px", // Dispositivos móviles grandes
             md: "768px", // Tablets (iPad estándar, tablets Android)
             lg:"1024px" //laptops pequeñas
+          },
+          backgroundImage:{
+            'patternmobile':"url('./images/pattern-bg-mobile.png')"
           }
         }
       }
@@ -32,7 +35,7 @@
 <body>
   <main>
 
-    <header>
+    <header class="min-h-[50vh] bg-cover bg-center bg-patternmobile bg-no-repeat border-2 border-yellow-500">
 
     </header>
     <!-- IP Address Tracker
