--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
   <main>
 
     <header class="min-h-[50vh] bg-cover bg-center bg-patternmobile bg-no-repeat border-2 border-yellow-500">
-
+        <div>
+          <h1>IP Address Tracker</h1>
+        </div>
     </header>
     <!-- IP Address Tracker
   
