[FEAT] Estableciendo en mi tailwind config la tipografia mediante el fontFamily donde estableci las fuentes poppins y rubik

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
           colors: {
             clifford: '#da373d',
           },
+          fontFamily: {
+            poppins: ['Poppins', 'serif'],
+            rubik: ['Rubik', 'serif'],
+          },
           screen:{
             sm: "640px", // Dispositivos móviles grandes
             md: "768px", // Tablets (iPad estándar, tablets Android)
