[FEAT] Estableciendo el tamaño de las fuentes en nuestro archivo tailwind config
- establecemos la clave regular a 400
- establecemos la clave semibold a 500
- establecemos la clave light a 700

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             poppins: ['Poppins', 'serif'],
             rubik: ['Rubik', 'serif'],
           },
+          fontWeight:{
+            regular: '400',
+            semibold: '500', 
+            light:'700'
+          },
           screen:{
             sm: "640px", // Dispositivos móviles grandes
             md: "768px", // Tablets (iPad estándar, tablets Android)
