[FEAT] Estableciendo padding en y arriba y abajo de 10 rem y usamos display flex para mover el contenido del titulo en donde estableci la clave flex y justify-center para que los elementos estén justificados al centro

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
   <main>
 
-    <header class="min-h-[50vh] bg-cover bg-center bg-patternmobile bg-no-repeat border-2 border-yellow-500">
+    <header class="min-h-[50vh] bg-cover bg-center bg-patternmobile bg-no-repeat border-2 border-yellow-500 py-10 flex justify-center">
         <div>
           <h1>IP Address Tracker</h1>
         </div>
