[FEAT] Cambios en el archivo index.html
- estableciendo en el display flrex las props flex-col para el direccionamiento de los elementos y items-center para centrar los elementos
- estableci multiples elementos html div, form y input en donde al div le estableci un padding-top de 10rem

--- a/index.html
+++ b/index.html
@@ -47,10 +47,17 @@
 <body>
   <main>
 
-    <header class="min-h-[50vh] bg-cover bg-center bg-patternmobile bg-no-repeat border-2 border-yellow-500 py-10 flex justify-center">
+    <header class="min-h-[50vh] bg-cover bg-center bg-patternmobile bg-no-repeat border-2 border-yellow-500 py-10 flex flex-col items-center">
         <div>
           <h1>IP Address Tracker</h1>
         </div>
+
+        <div class="pt-10">
+            <form action="#">
+              <input placeholder="" type="text">
+            </form>
+        </div>
+        
     </header>
     <!-- IP Address Tracker
   
