[FEAT] Multiples cambios en el archivo index.html
-  comentando el contenedor div
- estableciendo la prop class al elemento form con las siguientes props w-4/5 a 80%, height a 80px margin-top a 10rem, tamaño y color de borde, use display flex para que el contenido sea en dirección a row
- estableci la prop class con en el elemento html input donde estableci un width de 3/4 como al 75%, height full para que llene el alto de la caja
- estableci el elemento html div con la prop class con los siguientes atributos width a 1/4 como a 25% , tamaño y color de borde
- estableci el elemento html img con el source hacia el svg del icon-arrow y estableci la prop class con las siguientes clases tamaño y color de borde, width y altura a 10 rem, prop alt igual icon-arrow

--- a/index.html
+++ b/index.html
@@ -52,11 +52,14 @@
           <h1>IP Address Tracker</h1>
         </div>
 
-        <div class="pt-10">
-            <form action="#">
-              <input placeholder="" type="text">
+        <!-- <div class="w mt-10 border-2 border-red-600"> -->
+            <form class="w-4/5 h-[80px] mt-10 border-2 border-green-500 flex flex-row" action="#">
+              <input class="w-3/4 h-full" placeholder="" type="text">
+              <div class="w-1/4 border-2 border-yellow-600">
+                <img src="./images//icon-arrow.svg" class="border-2 border-pink-600 w-10 h-10" alt="icon-arrow">
+              </div>
             </form>
-        </div>
+        <!-- </div> -->
         
     </header>
     <!-- IP Address Tracker
