[FEAT] Cambios en el tailwind config y en el elemento div contenedor del icono
- estableciendo los colores de la documentación oficial del proyectos en donde use por claves el color blackdarkgray igual a 'hsl(0, 0%, 17%)', darkgray igual a 'hsl(0, 0%, 59%)'
- cambios en el elemento div, corregi el diagonal de más en el recurso de la imagen, use display flex para centrar el icono mediante items-center, justify-center y cambie el tamaño del icono a un width y height de 5rem

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       theme: {
         extend: {
           colors: {
-            clifford: '#da373d',
+            blackdarkgray: 'hsl(0, 0%, 17%)',
+            darkgray:'hsl(0, 0%, 59%)'
           },
           fontFamily: {
             poppins: ['Poppins', 'serif'],
@@ -55,8 +56,8 @@
         <!-- <div class="w mt-10 border-2 border-red-600"> -->
             <form class="w-4/5 h-[80px] mt-10 border-2 border-green-500 flex flex-row" action="#">
               <input class="w-3/4 h-full" placeholder="" type="text">
-              <div class="w-1/4 border-2 border-yellow-600">
-                <img src="./images//icon-arrow.svg" class="border-2 border-pink-600 w-10 h-10" alt="icon-arrow">
+              <div class="w-1/4 flex items-center justify-center border-2 border-yellow-600">
+                <img src="./images/icon-arrow.svg" class="border-2 border-pink-600 w-5 h-5" alt="icon-arrow">
               </div>
             </form>
         <!-- </div> -->
