--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- <div class="w mt-10 border-2 border-red-600"> -->
             <form class="w-4/5 h-[80px] mt-10 border-2 border-green-500 flex flex-row" action="#">
               <input class="w-3/4 h-full" placeholder="" type="text">
-              <div class="w-1/4 flex items-center justify-center border-2 border-yellow-600">
+              <div class="w-1/4 flex items-center justify-center border-2 border-yellow-600 bg-blackdarkgray">
                 <img src="./images/icon-arrow.svg" class="border-2 border-pink-600 w-5 h-5" alt="icon-arrow">
               </div>
             </form>
