--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <header class="min-h-[50vh] bg-cover bg-center bg-patternmobile bg-no-repeat border-2 border-yellow-500 py-10 flex flex-col items-center">
         <div>
-          <h1>IP Address Tracker</h1>
+          <h1 class="font-rubik font-semibold text-white text-lg">IP Address Tracker</h1>
         </div>
 
         <!-- <div class="w mt-10 border-2 border-red-600"> -->
