[FEAT] Estableciendo comentarios delimitadores y agregando formato

--- a/index.html
+++ b/index.html
@@ -48,21 +48,23 @@
 <body>
   <main>
 
+    <!-- inicio header -->
     <header class="min-h-[50vh] bg-cover bg-center bg-patternmobile bg-no-repeat border-2 border-yellow-500 py-7 flex flex-col items-center">
         <div>
           <h1 class="font-rubik font-semibold text-white text-lg">IP Address Tracker</h1>
         </div>
 
-        <!-- <div class="w mt-10 border-2 border-red-600"> -->
-            <form class="w-4/5 h-[80px] mt-7 border-2 border-green-500 flex flex-row" action="#">
-              <input class="w-3/4 h-full" placeholder="" type="text">
-              <div class="w-1/4 flex items-center justify-center border-2 border-yellow-600 bg-blackdarkgray">
-                <img src="./images/icon-arrow.svg" class="border-2 border-pink-600 w-5 h-5" alt="icon-arrow">
-              </div>
-            </form>
-        <!-- </div> -->
+        <!-- inicio form -->
+        <form class="w-4/5 h-[80px] mt-7 border-2 border-green-500 flex flex-row" action="#">
+            <input class="w-3/4 h-full" placeholder="" type="text">
+            <div class="w-1/4 flex items-center justify-center border-2 border-yellow-600 bg-blackdarkgray">
+              <img src="./images/icon-arrow.svg" class="border-2 border-pink-600 w-5 h-5" alt="icon-arrow">
+            </div>
+        </form>
+        <!-- fin form -->
         
     </header>
+    <!-- fin header -->
     <!-- IP Address Tracker
   
     Search for any IP address or domain
