--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         </div>
 
         <!-- inicio form -->
-        <form class="w-4/5 h-[80px] mt-7 border-2 border-green-500 flex flex-row" action="#">
-            <input class="w-3/4 h-full" placeholder="" type="text">
-            <div class="w-1/4 flex items-center justify-center border-2 border-yellow-600 bg-blackdarkgray">
+        <form class="w-4/5 h-[60px] relative mt-7 border-2 border-green-500" action="#">
+            <input class="w-full h-full rounded-lg"  placeholder="" type="text">
+            <div class="w-1/4 h-full absolute top-0 left-3/4 rounded-r-lg flex items-center justify-center bg-blackdarkgray">
               <img src="./images/icon-arrow.svg" class="border-2 border-pink-600 w-5 h-5" alt="icon-arrow">
             </div>
         </form>
