[FEAT] Estableciendo espaciado y formato en el index.html
- estableciendo el elemento html div donde mostraremos la infromación del dominio de la ip
- establecemos comentarios delimitadores

--- a/index.html
+++ b/index.html
@@ -56,12 +56,28 @@
 
         <!-- inicio form -->
         <form class="w-4/5 h-[60px] relative mt-7 border-2 border-green-500" action="#">
-            <input class="w-full h-full rounded-lg"  placeholder="" type="text">
+          
+            <input 
+              class="w-full h-full rounded-lg"  
+              placeholder="Search for any IP address or domain" 
+              type="text"
+            >
+
             <div class="w-1/4 h-full absolute top-0 left-3/4 rounded-r-lg flex items-center justify-center bg-blackdarkgray">
-              <img src="./images/icon-arrow.svg" class="border-2 border-pink-600 w-5 h-5" alt="icon-arrow">
+              <img 
+                src="./images/icon-arrow.svg"
+                class="border-2 border-pink-600 w-5 h-5"
+                alt="icon-arrow"
+              >
             </div>
         </form>
         <!-- fin form -->
+
+        <!-- inicio información de la api -->
+        <div>
+
+        </div>
+        <!-- fin información de la api -->
         
     </header>
     <!-- fin header -->
