[FEAT] Cambios en el form y el input html
- elimine el tamaño y color de borde en el form
- estableci la clave placeholder en donde lo defini de color darkgray, fuente poppins, font-weight a font-light, tamaño de texto a 0.6rem, padding left a 5rem
- agregue la prop class en el elemento html div con el width a 4/5 igual al 80%
- lo dejará hasta aqui y en unas horas le seguimos, necesito descansar

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         </div>
 
         <!-- inicio form -->
-        <form class="w-4/5 h-[60px] relative mt-7 border-2 border-green-500" action="#">
-          
+        <form class="w-4/5 h-[60px] relative mt-7" action="#">
+
             <input 
-              class="w-full h-full rounded-lg"  
+              class="w-full h-full rounded-lg placeholder-darkgray font-poppins font-light text-[0.6rem] pl-5"  
               placeholder="Search for any IP address or domain" 
               type="text"
             >
@@ -74,7 +74,7 @@
         <!-- fin form -->
 
         <!-- inicio información de la api -->
-        <div>
+        <div class="w-4/5">
 
         </div>
         <!-- fin información de la api -->
