--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="w-1/4 h-full absolute top-0 left-3/4 rounded-r-lg flex items-center justify-center bg-blackdarkgray">
               <img 
                 src="./images/icon-arrow.svg"
-                class="border-2 border-pink-600 w-5 h-5"
+                class="w-3.5 h-3.5"
                 alt="icon-arrow"
               >
             </div>
