[FEAT] Cambios en el div contenedor del icono
- estableciendo un tamaño de 16.6% al div y moviendo el contenedor a un 85%

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               type="text"
             >
 
-            <div class="w-1/4 h-full absolute top-0 left-3/4 rounded-r-lg flex items-center justify-center bg-blackdarkgray">
+            <div class="w-1/6 h-full absolute top-0 left-[85%] rounded-r-lg flex items-center justify-center bg-blackdarkgray">
               <img 
                 src="./images/icon-arrow.svg"
                 class="w-3.5 h-3.5"
