[FEAT] Multiples cambios en el archivo index.html
- estableciendo el maquetado para la información de dominio de la api
- bien en el contenedor principal modifique el padding en x y en y a 3rem, use display flex para alinear los elementos en column
- multiples elementos div con los atributos width en full, altura al 25%, padding en y de 1rem, text-center
- estableci cada uno de los titulos de la información IP ADDRESS, LOCATION, TIMEZONE Y ISP, css con la fuente rubik, fuente-semibold para el font-weight, text-darkgray, tamaño de fuente a 0.6rem
- elimine el tamaño y color de borde en donde ira el mapa para observar la aplicación

--- a/index.html
+++ b/index.html
@@ -75,8 +75,23 @@
         <!-- fin form -->
 
         <!-- inicio información de la api -->
-        <div class="w-4/5 h-3/5 py-5 px-5 bg-white absolute top-1/2 rounded-lg border-3 border-blue-400 text-center">
-          <span class="font-rubik font-semibold text-darkgray text-[0.6rem]">IP ADDRESS</span>
+        <div class="w-4/5 h-3/5 py-3 px-3 bg-white absolute top-1/2 rounded-lg border-3 border-blue-400 flex flex-col">
+          <div class="w-full h-1/4 py-1 text-center">
+            <h2 class="font-rubik font-semibold text-darkgray text-[0.6rem]">IP ADDRESS</h2>
+            <p></p>
+          </div>
+          <div class="w-full h-1/4 py-1 text-center">
+            <h2 class="font-rubik font-semibold text-darkgray text-[0.6rem]">LOCATION</h2>
+            <p></p>
+          </div>
+          <div class="w-full h-1/4 py-1 text-center">
+            <h2 class="font-rubik font-semibold text-darkgray text-[0.6rem]">TIMEZONE</h2>
+            <p></p>
+          </div>
+          <div class="w-full h-1/4 py-1 text-center">
+            <h2 class="font-rubik font-semibold text-darkgray text-[0.6rem]">ISP</h2>
+            <p></p>
+          </div>
         </div>
         <!-- fin información de la api -->
         
@@ -84,7 +99,7 @@
     <!-- fin header -->
 
     <!-- inicio map -->
-    <div class="w-full h-screen border-2 border-red-400 bg-[#ededed]">
+    <div class="w-full h-screen  bg-[#ededed]">
 
     </div>
     <!-- fin map -->
