[FEAT] Estableciendo el atributo id en el input para buscar la dirección ip ó dominio
- estableci el atributo id igual a ipaddress

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
               placeholder="Search for any IP address or domain" 
               type="text"
               maxlength="15"
+              id="ipaddress"
             >
 
             <div class="w-1/6 h-full absolute top-0 left-[84%] rounded-r-lg flex items-center justify-center bg-blackdarkgray">
