--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               id="ipaddress"
             >
 
-            <div class="w-1/6 h-full absolute top-0 left-[84%] rounded-r-lg flex items-center justify-center bg-blackdarkgray">
+            <div onclick="getipaddress()" class="w-1/6 h-full absolute top-0 left-[84%] rounded-r-lg flex items-center justify-center bg-blackdarkgray">
               <img 
                 src="./images/icon-arrow.svg"
                 class="w-3.5 h-3.5"
