--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
               type="text"
               maxlength="15"
               id="ipaddress"
+              value="192.212.174.101"
             >
 
             <div onclick="getipaddress()" class="w-1/6 h-full absolute top-0 left-[84%] rounded-r-lg flex items-center justify-center bg-blackdarkgray">
