--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="./js/index.js" defer></script>
   <title>Frontend Mentor | IP Address Tracker</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+  crossorigin=""
+  />
   <script>
     tailwind.config = {
       theme: {
