[FEAT] Establecemos en el elemento div el id igual a map, esto servira para mostrar el mapa

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <!-- fin header -->
 
     <!-- inicio map -->
-    <div class="w-full h-screen  bg-[#ededed]">
+    <div id="map" class="w-full h-screen  bg-[#ededed]">
 
     </div>
     <!-- fin map -->
