[FEAT] Usando z-index para el posicionamiento de la información de la api
- estableci un z-index de cero para que el mapa este por detrás de la información de la api
- estableci un z-index de 10 para que la información de la api esta por encima del mapa
- estableci formato en las propiedades de las clases para que el css de tailwind sea un poco más legible

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
   <main>
 
     <!-- inicio header -->
-    <header class="relative min-h-[50vh] bg-cover bg-center bg-patternmobile bg-no-repeat py-7 flex flex-col items-center">
+    <header 
+        class="relative min-h-[50vh] bg-cover bg-center bg-patternmobile bg-no-repeat 
+        py-7 flex flex-col items-center"
+      >
         <div>
           <h1 class="font-rubik font-semibold text-white text-lg">IP Address Tracker</h1>
         </div>
@@ -86,7 +89,10 @@
         <!-- fin form -->
 
         <!-- inicio información de la api -->
-        <div class="w-4/5 h-3/5 py-3 px-3 bg-white absolute top-1/2 rounded-lg border-3 border-blue-400 flex flex-col">
+        <div 
+          class="w-4/5 h-3/5 py-3 px-3 bg-white absolute top-1/2 rounded-lg border-3 
+          border-blue-400 flex flex-col z-10"
+        >
           <div class="w-full h-1/4 py-1 text-center">
             <h2 class="font-rubik font-semibold text-darkgray text-[0.6rem]">IP ADDRESS</h2>
             <p></p>
@@ -110,7 +116,7 @@
     <!-- fin header -->
 
     <!-- inicio map -->
-    <div id="map" class="w-full h-screen  bg-[#ededed]">
+    <div id="map" class="w-full h-screen  bg-[#ededed] z-0 relative">
 
     </div>
     <!-- fin map -->
