[FEAT] Comentamos todo el contenido del html del cual ira todo la información de la ip

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <!-- fin form -->
 
         <!-- inicio información de la api -->
-        <div 
+        <!-- <div 
           class="w-4/5 h-3/5 py-3 px-3 bg-white absolute top-1/2 rounded-lg border-3 
           border-blue-400 flex flex-col z-10"
         >
@@ -109,7 +109,7 @@
             <h2 class="font-rubik font-semibold text-darkgray text-[0.6rem]">ISP</h2>
             <p></p>
           </div>
-        </div>
+        </div> -->
         <!-- fin información de la api -->
         
     </header>
