[FEAT] Configurando el break point para 1440px dada la documentación odicial
- convirtiendo a string los valores clave de los break points

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
             light:'700'
           },
           screen:{
-            sm: "640px", // Dispositivos móviles grandes
-            md: "768px", // Tablets (iPad estándar, tablets Android)
-            lg:"1024px" //laptops pequeñas
+            'sm': "640px", // Dispositivos móviles grandes
+            'md': "768px", // Tablets (iPad estándar, tablets Android)
+            'lg':"1024px", //laptops pequeñas
+            '2xl': "1440px"
           },
           backgroundImage:{
             'patternmobile':"url('./images/pattern-bg-mobile.png')"
