[FEAT] Estableciendo el la opción de tailwind config la clave patterdesktop para acceder a la imagen del patrón de fondo para versiones desktop
- estableci la clave patterdesktop en donde accedi mediante la prop url al asset pattern-bg-desktop.png
- esto servira para el break point en pantallas como laptops

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             '2xl': "1440px"
           },
           backgroundImage:{
-            'patternmobile':"url('./images/pattern-bg-mobile.png')"
+            'patternmobile':"url('./images/pattern-bg-mobile.png')",
+            'patterdesktop':"url('./images/pattern-bg-desktop.png')"
           }
         }
       }
