--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           },
           backgroundImage:{
             'patternmobile':"url('./images/pattern-bg-mobile.png')",
-            'patterdesktop':"url('./images/pattern-bg-desktop.png')"
+            'patterndesktop':"url('./images/pattern-bg-desktop.png')"
           }
         }
       }
@@ -62,7 +62,7 @@
     <!-- inicio header -->
     <header 
         class="relative min-h-[50vh] bg-cover bg-center bg-patternmobile bg-no-repeat 
-        py-7 flex flex-col items-center"
+        py-7 flex flex-col items-center lg:bg-patterndesktop"
       >
         <div>
           <h1 class="font-rubik font-semibold text-white text-lg">IP Address Tracker</h1>
