[FEAT] Eliminando el codigo html comentado del proyecto inicial de vite
- eliminnando los comenatarios de la linea 18
- eliminando el atributo onclick en donde pasamos la referencia del método getipaddress

--- a/index.html
+++ b/index.html
@@ -1,22 +1,8 @@
-<!-- <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
-</html> -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -97,9 +83,9 @@
             >
 
             <div 
-              onclick="getipaddress()" 
               class="w-1/6 h-full absolute top-0 left-[84%] rounded-r-lg flex items-center justify-center 
               bg-blackdarkgray"
+              id="searchButton"
             >
               <img 
                 src="./images/icon-arrow.svg"
