--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             '2xl': "1440px"
           },
           backgroundImage:{
-            'patternmobile':"url('/ip-address-tracker/images/pattern-bg-mobile.png')",
-            'patterndesktop':"url('/ip-address-tracker/images/pattern-bg-desktop.png')"
+            'patternmobile':"url('/images/pattern-bg-mobile.png')",
+            'patterndesktop':"url('/images/pattern-bg-desktop.png')"
           }
         }
       }
@@ -90,7 +90,7 @@
               id="searchButton"
             >
               <img 
-                src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='11'%20height='14'%3e%3cpath%20fill='none'%20stroke='%23FFF'%20stroke-width='3'%20d='M2%201l6%206-6%206'/%3e%3c/svg%3e"
+                src="./images/icon-arrow.svg"
                 class="w-3.5 h-3.5"
                 alt="icon-arrow"
               >
