[FEAT] Cambios importantes en el index.html
- eliminando la prop action por el atributo id igual a myform en el elemento html form
- cambiando el elemento div por el elemento button y estableciendo el atributo type submit para enviar los datos del formulario

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!-- inicio form -->
         <form 
           class="w-4/5 h-[60px] relative mt-7 lg:w-2/5" 
-          action="#"
+          id="myform"
         >
 
             <input 
@@ -84,17 +84,17 @@
               id="ipaddress"
             >
 
-            <div 
+            <button 
               class="w-1/6 h-full absolute top-0 left-[84%] rounded-r-lg flex items-center justify-center 
               bg-blackdarkgray hover:bg-blackdarkgray-600"
-              id="searchButton"
+              type="submit"
             >
               <img 
                 src="./images/icon-arrow.svg"
                 class="w-3.5 h-3.5"
                 alt="icon-arrow"
               >
-            </div>
+            </button>
         </form>
         <!-- fin form -->  
         
